--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 		<button id="settings_button" class="menu_button" onclick="ShowSettingsMenu()">Settings</button>
 		<button id="statistics_button" class="menu_button" onclick="ShowStatisticsMenu()">Statistics</button>
 		<button id="rules_button" class="menu_button" onclick="ShowRulesMenu()">Rules</button>
-		<button id="play_as_computer_button" class="menu_button" onclick="ShowPlayAsAComputerMenu()">Play With Code</button>
+		<!--<button id="play_as_computer_button" class="menu_button" onclick="ShowPlayAsAComputerMenu()">Play With Code</button>-->
 	</div>
 
 	<div id="menu_start_a_game" class="menu_view">
