--- a/index.html
+++ b/index.html
@@ -178,7 +178,10 @@
 				data-ad-format="auto"
 				data-full-width-responsive="true"></ins>
 		<script>
-			(adsbygoogle = window.adsbygoogle || []).push({});
+			(adsbygoogle = window.adsbygoogle || []).push({
+          		google_ad_client: "ca-pub-2857597813964310",
+				enable_page_level_ads: true
+			});
 		</script>
 	</div>
 
