--- a/index.html
+++ b/index.html
@@ -170,18 +170,13 @@
 
 	<div id="adView" align="center">
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<!-- Pinochle Classic Web -->
+		<!-- Pinochle Web -->
 		<ins class="adsbygoogle"
-				style="display:block;width:728px;height:90px"
-				data-ad-client="ca-pub-2857597813964310"
-				data-ad-slot="7122255786"
-				data-ad-format="auto"
-				data-full-width-responsive="true"></ins>
+			 style="display:inline-block;width:728px;height:90px"
+			 data-ad-client="ca-pub-2857597813964310"
+			 data-ad-slot="4103981219"></ins>
 		<script>
-			(adsbygoogle = window.adsbygoogle || []).push({
-          		google_ad_client: "ca-pub-2857597813964310",
-				enable_page_level_ads: true
-			});
+		(adsbygoogle = window.adsbygoogle || []).push({});
 		</script>
 	</div>
 
