--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 		var game = null;
 
 		window.onload = function () {
-			if (redirectToAppStore()) {
-				return;
-			}
+			//if (redirectToAppStore()) {
+			//	return;
+			//}
 			UpdateBackgroundImageFromSettings();
 			setTimeout(function () {
 				ShowMainMenu(false);
