viewport for ios
viewport for ios

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<meta name="description" content="Play pinochle online with this website.  This is the best free pinochle game online. The site is built with HTML CSS and Javascript">
 	<meta name="author" content="Pinochle Card Classic">
 
+	<meta name="viewport" content="initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, user-scalable=no">
+	
 	<link rel="stylesheet" href="menus.css">
 	<link rel="stylesheet" href="cards.css">
 	<link rel="stylesheet" href="scoreboard.css">
